--- a/style.css
+++ b/style.css
@@ -1486,3 +1486,23 @@ footer {
     -webkit-backface-visibility: hidden;
     will-change: transform;
 }
+
+
+
+/* For Chrome, Edge, and Safari */
+#footerGoals::-webkit-scrollbar {
+  width: 5px;
+}
+
+#footerGoals::-webkit-scrollbar-track {
+  background: rgba(255, 255, 255, 0.1);
+}
+
+#footerGoals::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, 0.3);
+  border-radius: 3px;
+}
+
+.dark-theme #footerGoals::-webkit-scrollbar-thumb {
+  background: rgba(255, 255, 255, 0.2);
+}
